# templatematching-gpu

./: CMakeLists.txt  README  display.h  gpu-module.cu  gpu-module.h  helper.h  main.cc  performance.h  type.h
